Ensure conditions persist on edits
- In the `setConditionsFormName` method in `Conditions`, set the form
  name and JsFormObject so conditions get set on subsequent answer edits
- Remove the `conditions_serialized` parameter from form saves; this
  field gets set automatically from the AnswerModel's `beforeSave`
  command, courtesy of its parent model
- Adjust the `silentpost_answer_form` ui component
- Rename the composer.json's package name to conform to Magento core's
  naming convention

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "silentpost/product-quiz",
+  "name": "silentpost/module-product-quiz",
   "version": "1.0.0",
   "description": "Provide users with a suggested product after answering questions based on product attributes.",
   "type": "magento2-module",
